# StellarQtSDK

./: .gitignore  CMakeLists.txt  README.md  StellarQtSDK.pri  StellarQtSDK.pro  StellarQtSDKTest.pro  main.cpp
src/: CMakeLists.txt  abstracttransaction.cpp  abstracttransaction.h  account.cpp  account.h  accountconverter.cpp  accountconverter.h  accountmergeoperation.cpp  accountmergeoperation.h  allowtrustoperation.cpp  allowtrustoperation.h  asset.cpp  asset.h  assettypecreditalphanum.cpp  assettypecreditalphanum.h  assettypecreditalphanum12.cpp  assettypecreditalphanum12.h  assettypecreditalphanum4.cpp  assettypecreditalphanum4.h  assettypenative.cpp  assettypenative.h  beginsponsoringfuturereservesoperation.cpp  beginsponsoringfuturereservesoperation.h  bumpsequenceoperation.cpp  bumpsequenceoperation.h  changetrustoperation.cpp  changetrustoperation.h  checkaccountrequiresmemo.cpp  checkaccountrequiresmemo.h  claimant.cpp  claimant.h  claimclaimablebalanceoperation.cpp  claimclaimablebalanceoperation.h  clawbackclaimablebalanceoperation.cpp  clawbackclaimablebalanceoperation.h  clawbackoperation.cpp  clawbackoperation.h  createaccountoperation.cpp  createaccountoperation.h  createclaimablebalanceoperation.cpp  (+72 more)
src/federation/: federation.cpp  federation.h  federationresponse.cpp  federationresponse.h  federationserver.cpp  federationserver.h
src/requests/: accountsrequestbuilder.cpp  accountsrequestbuilder.h  assetsrequestbuilder.cpp  assetsrequestbuilder.h  claimablebalancesrequestbuilder.cpp  claimablebalancesrequestbuilder.h  effectsrequestbuilder.cpp  effectsrequestbuilder.h  eventlistener.cpp  eventlistener.h  feestatsrequestbuilder.cpp  feestatsrequestbuilder.h  ledgersrequestbuilder.cpp  ledgersrequestbuilder.h  offersrequestbuilder.cpp  offersrequestbuilder.h  operationfeestatsrequestbuilder.cpp  operationfeestatsrequestbuilder.h  operationsrequestbuilder.cpp  operationsrequestbuilder.h  orderbookrequestbuilder.cpp  orderbookrequestbuilder.h  pathsrequestbuilder.cpp  pathsrequestbuilder.h  paymentsrequestbuilder.cpp  paymentsrequestbuilder.h  requestbuilder.cpp  requestbuilder.h  rootrequestbuilder.cpp  rootrequestbuilder.h  strictreceivepathsrequestbuilder.cpp  strictreceivepathsrequestbuilder.h  strictsendpathsrequestbuilder.cpp  strictsendpathsrequestbuilder.h  tradeaggregationsrequestbuilder.cpp  tradeaggregationsrequestbuilder.h  tradesrequestbuilder.cpp  tradesrequestbuilder.h  transactionsrequestbuilder.cpp  transactionsrequestbuilder.h
src/responses/: accountresponse.cpp  accountresponse.h  assetresponse.cpp  assetresponse.h  claimablebalanceresponse.cpp  claimablebalanceresponse.h  common.h  effectspage.cpp  effectspage.h  feestatsresponse.cpp  feestatsresponse.h  genericoperation.cpp  genericoperation.h  ledgerresponse.cpp  ledgerresponse.h  link.cpp  link.h  offerresponse.cpp  offerresponse.h  operationfeestatsresponse.cpp  operationfeestatsresponse.h  operationpage.cpp  operationpage.h  orderbookresponse.cpp  orderbookresponse.h  page.cpp  page.h  pathresponse.cpp  pathresponse.h  response.cpp  response.h  rootresponse.cpp  rootresponse.h  submittransactionresponse.cpp  submittransactionresponse.h  tradeaggregationresponse.cpp  tradeaggregationresponse.h  traderesponse.cpp  traderesponse.h  transactionresponse.cpp  (+1 more)
src/responses/effects/: accountcreatedeffectresponse.cpp  accountcreatedeffectresponse.h  accountcreditedeffectresponse.cpp  accountcreditedeffectresponse.h  accountdebitedeffectresponse.cpp  accountdebitedeffectresponse.h  accountflagsupdatedeffectresponse.cpp  accountflagsupdatedeffectresponse.h  accounthomedomainupdatedeffectresponse.cpp  accounthomedomainupdatedeffectresponse.h  accountinflationdestinationupdatedeffectresponse.cpp  accountinflationdestinationupdatedeffectresponse.h  accountremovedeffectresponse.cpp  accountremovedeffectresponse.h  accountsponsorshipcreatedeffectresponse.cpp  accountsponsorshipcreatedeffectresponse.h  accountsponsorshipremovedeffectresponse.cpp  accountsponsorshipremovedeffectresponse.h  accountsponsorshipupdatedeffectresponse.cpp  accountsponsorshipupdatedeffectresponse.h  accountthresholdsupdatedeffectresponse.cpp  accountthresholdsupdatedeffectresponse.h  claimablebalanceclaimantcreatedeffectresponse.cpp  claimablebalanceclaimantcreatedeffectresponse.h  claimablebalanceclaimedeffectresponse.cpp  claimablebalanceclaimedeffectresponse.h  claimablebalanceclawedbackeffectresponse.cpp  claimablebalanceclawedbackeffectresponse.h  claimablebalancecreatedeffectresponse.cpp  claimablebalancecreatedeffectresponse.h  claimablebalancesponsorshipcreatedeffectresponse.cpp  claimablebalancesponsorshipcreatedeffectresponse.h  claimablebalancesponsorshipremovedeffectresponse.cpp  claimablebalancesponsorshipremovedeffectresponse.h  claimablebalancesponsorshipupdatedeffectresponse.cpp  claimablebalancesponsorshipupdatedeffectresponse.h  datacreatedeffectresponse.cpp  datacreatedeffectresponse.h  dataremovedeffectresponse.cpp  dataremovedeffectresponse.h  (+58 more)
src/responses/operations/: accountmergeoperationresponse.cpp  accountmergeoperationresponse.h  allowtrustoperationresponse.cpp  allowtrustoperationresponse.h  beginsponsoringfuturereservesoperationresponse.cpp  beginsponsoringfuturereservesoperationresponse.h  bumpsequenceoperationresponse.cpp  bumpsequenceoperationresponse.h  changetrustoperationresponse.cpp  changetrustoperationresponse.h  claimclaimablebalanceoperationresponse.cpp  claimclaimablebalanceoperationresponse.h  clawbackclaimablebalanceoperationresponse.cpp  clawbackclaimablebalanceoperationresponse.h  clawbackoperationresponse.cpp  clawbackoperationresponse.h  createaccountoperationresponse.cpp  createaccountoperationresponse.h  createclaimablebalanceoperationresponse.cpp  createclaimablebalanceoperationresponse.h  createpassiveofferoperationresponse.cpp  createpassiveofferoperationresponse.h  endsponsoringfuturereservesoperationresponse.cpp  endsponsoringfuturereservesoperationresponse.h  inflationoperationresponse.cpp  inflationoperationresponse.h  managebuyofferoperationresponse.cpp  operationresponse.h  (+24 more)
(+76 files in other folders)
